<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17701" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
    <dependencies>
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17701"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
...
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <customView id="c22-O7-iKe" userLabel="Container View">
            <rect key="frame" x="0.0" y="0.0" width="467" height="72"/>
            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
            <subviews>
                <customView translatesAutoresizingMaskIntoConstraints="NO" id="dho-IB-nAG" userLabel="Formatter Container View">
                    <rect key="frame" x="0.0" y="0.0" width="467" height="72"/>
                </customView>
            </subviews>
            <constraints>
                <constraint firstAttribute="bottom" secondItem="dho-IB-nAG" secondAttribute="bottom" id="j4M-Hs-rEa"/>
                <constraint firstItem="dho-IB-nAG" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="qB3-bc-P86"/>
...
