...

        alert.messageText = title
        alert.informativeText = loc(
            String(format: "Your meeting starts at %@. Beam will automatically open the call when it starts.", startTimeFormatted)
        )
        alert.addButton(withTitle: loc(String(format: "Auto Join at %@", startTimeFormatted)))
        alert.addButton(withTitle: loc("OK"))

        return (alert, meeting)
    }
}

extension VideoCallsManager.Error {
...
