...

    func updateViewSize(width: CGFloat, height: CGFloat) {
        clearInputFocus()
    }

    func handleWebFormSubmit(with elementId: String, frameInfo: WKFrameInfo?) {
        Logger.shared.logDebug("Submit: \(elementId)", category: .passwordManagerInternal)
        disabledForSubmit = true // disable focus handler temporarily, to prevent the password manager menu from reappearing if the JS code triggers a selection in a text field
        clearInputFocus()
        requestValuesFromTextFields(frameInfo: frameInfo) { [weak self] dict in
            guard let self = self else { return }
            if let values = dict ?? self.valuesOnFocusOut {
                self.updateStoredValues(with: values, userInput: true, frameInfo: frameInfo)
...
